2008-02-15  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/iso.*: Moved VDWSurface to IsoGen. This
	makes the surface engine much more interactive. Also added a type
	parameter to the init function to set the surface type:
	VDWsurfaceType, OrbitalType, ...
	Small changes to VDWSurface to ensure only the primitives set for the
	engine are included in the surface.

	* libavogadro/src/engines/surfaceengine.*: Same as above + fix to set
	the opacity of RGB colored surfaces.
	
	* libavogadro/src/engines/orbitalengine.*: Comment out init() to make
	sure it still compiles.

2008-02-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/tools/skeletontree.cpp: Fix bug with
	bond-centric manipulate tool. Translations and rotations were not
	telling atoms that they were updated. Fixes PR#1854343.

	* libavogadro/src/tools/autorotatetool.cpp: Quick fix for
	PR#1891101. Will not do rotations if no molecule is loaded.

	* libavogadro/src/colorbutton.*: New widget to show the current
	color and bring up a color picker when clicked.

	* libavogadro/src/engines/surfacesettingswidget.ui: Use it.

	* libavogadro/src/engines/surfaceengine.*: Ditto.

2008-02-09  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/surfaceengine2.*: Removed old files. Added
	Marcus and me to the copyright header.
	
	* libavogadro/src/engines/surfaceengine.*: Added settings widget.
	
	* libavogadro/src/engines/CMakeList.txt: Added settings widget.

	* libavogadro/src/engines/surfacesettingswidget.ui: Settings widget.
	
2008-02-04  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/clickmeasuretool.*: Added support for
	measuring the dihedral angle. Also made the tool update dynamically as
	the molecule is changed, optimised the label placement and ported it
	to use the OpenBabel functions to find the angles concerned.

2008-02-03  Marcus D. Hanwell  <marcus@cryos.org>
